--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.1.1"
+    "mysql2": "^3.9.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
