--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,9 @@
-APP_PORT=6001
-MONGODB_URI=mongdb_uri
+API_PORT=your_API_port
 
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=your_frontend_url
+
+DB_HOST=your_db_host
+DB_PORT=your_db_port
+DB_USER=your_db_user
+DB_PASSWORD=your_db_password
+DB_NAME=your_db_name
