--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,11 +1,14 @@
 {
-  "root": true,
   "env": {
-    "node": true
-  },
+    "node": true,
+    "browser": true,
+    "es6": true
+},
   "extends": ["plugin:vue/vue3-essential", "@vue/prettier"],
   "rules": {
     "no-console": "off",
-    "no-debugger": "off"
+    "no-debugger": "off",
+    "vue/multi-word-component-names": "off",
+    "vue/comment-directive": "off"
   }
 }
