--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,13 @@
     "fix": "prettier --write . && eslint --fix --ext .js,.vue ."
   },
   "dependencies": {
-    "vue": "^3.4.15"
+    "@quasar/extras": "^1.16.9",
+    "quasar": "^2.14.3",
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.6.0",
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/eslint-config-prettier": "^8.0.0",
